[Splash] Fixed button and text styles for improved readability.

--- a/src/components/ButtonLink/ButtonLink.css
+++ b/src/components/ButtonLink/ButtonLink.css
@@ -6,8 +6,9 @@
 @import "styles/sizes";
 
 .button {
-  border: 3px solid var(--color-carnation);
-  color: var(--color-carnation);
+  border: 1px solid var(--color-carnation);
+  color: var(--color-white);
+  background: var(--color-carnation);
   display: inline-block;
   font-size: 18px;
   margin-top: 10px;
@@ -17,7 +18,6 @@
   transition: all 200ms ease-in-out;
 
   &:hover {
-    background: var(--color-carnation);
-    color: var(--color-white);
+    border: 1px solid var(--color-white);
   }
 }
